@@ -18,14 +18,18 @@ mvn compile
 
 #### Testing
 
+Run tests:
+
 ```shell
 mvn test
 ```
 
-Manually testing async servlet:
+Manually testing async servlet (many of the requests will time out):
 
 ```shell
-https://www.hackerearth.com/practice/notes/asynchronous-servlets-in-java/
+mvn compile jetty:run
+# on separate window
+for i in `seq 10`; do curl http://localhost:8080/async-hello/\?seconds\=1 & echo ''; done
 ```
 
 
@@ -34,7 +38,19 @@ https://www.hackerearth.com/practice/notes/asynchronous-servlets-in-java/
 mvn verify
 ```
 
-#### Releasing
+### Docker
+
+Note this example uses a Maven Central mirror, remove the buid arg and the extra host to use Maven Centrall
+
+```shell
+docker build -t hello-world \
+  --build-arg MAVEN_CENTRAL_MIRROR=http://reposilite.h0.local.test/maven-central \
+  --add-host=reposilite.h0.local.test:192.168.1.31 \
+  .
+```
+
+
+#### Releasing source
 
 
 ```shell
@@ -43,11 +59,37 @@ mvn -B release:prepare release:perform \
 	-Darguments=" -DaltDeploymentRepository=REPO::default::file://$HOME/.m2/repository" -U
  ```
 
-#### Webapps
+#### Webapps with Jetty
+
+Jetty configuration:
+
+List modules with: `java -jar ./start.jar --list-modules`
+Generate module ini files: `java -jar ../jetty-home-12.0.15/start.jar --add-modules=server,deploy,ee10-deploy,ext,http,requestlog,resources,rewrite`
+
+which generates this structure:
+
+```
+├── etc
+│   └── jetty-rewrite-rules.xml
+├── lib
+│   └── ext
+├── logs
+├── resources
+│   └── jetty-logging.properties
+├── start.d
+│   ├── deploy.ini
+│   ├── ee10-deploy.ini
+│   ├── ext.ini
+│   ├── http.ini
+│   ├── requestlog.ini
+│   ├── resources.ini
+│   ├── rewrite.ini
+│   └── server.ini
+└── webapps
+```
 
 
-
-Defaults of jetty:run:
+Default paths of maven jetty plugin jetty:run:
 - resources in `${project.basedir}/src/main/webapp`
 - classes in `${project.build.outputDirectory}`
 - web.xml in `${project.basedir}/src/main/webapp/WEB-INF/`
